--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
           <div style="display:flex;gap:8px;align-items:center">
             <button type="button" class="ghost" id="backBtn">Back</button>
             <div class="small muted">Need help? <a href="#" onclick="alert('This is a mock demo.');return false">Contact support</a></div>
+            <button id="startCobrowseButton" disabled>Start CoBrowse</button>
+
           </div>
           <div>
             <button type="button" class="primary" id="continueBtn">Continue to payment</button>
@@ -199,6 +201,26 @@
 
         // init
         updateSummary();
+        
+        // Listen for the ZoomZccCobrowseSDK:Ready event
+        window.addEventListener('ZoomZccCobrowseSDK:Ready', function(event) {
+            const button = document.getElementById('startCobrowseButton'); // Your custom button ID
+
+            if (button) {
+                // Optional: Enable the button if it is disabled
+                button.disabled = false;
+                
+                // Add a click event to start the Cobrowse session
+                button.addEventListener('click', function() {
+                    try {
+                        window.ZoomZccCobrowseSDK.init();
+                    } catch (e) {
+                        console.log("ZoomZccCobrowseSDK is not ready, please try again later")
+                    }
+                });
+            }
+        });
+
       </script>
     </main>
 
@@ -237,14 +259,13 @@
       <div style="margin-top:12px;font-size:12px;color:var(--muted)">Privacy • Terms • Cookies</div>
     </aside>
   </div>
-              <button id="startCobrowseButton" disabled>Start CoBrowse</button>
-
   <script
       data-apikey="Q_ty2k4uSJ2UTwLnfGCwqA"
       data-env="us01"
       data-enable-zcb="true"
       src="https://us01ccistatic.zoom.us/us01cci/web-sdk/zcc-sdk.js">
   </script>
+  
   
   <script src="script.js"</script>
   <footer>
